--- a/accounts/templates/accounts/journal_entry.html
+++ b/accounts/templates/accounts/journal_entry.html
@@ -1,4 +1,4 @@
-{% load staticfiles %}
+{% extends "_layout.html" %}
 
 {% if messages %}
     {% for message in messages %}
@@ -6,26 +6,13 @@
     {% endfor %}
 {% endif %}
 
-<form method="post">
+{% block body_content %}
+<form method="post", action="">
     {% csrf_token %}
-
-    {{ link_formset.management_form }}
-
-    {% for link_form in link_formset %}
+    {{ journal_formset.management_form }}
+    {% for journal_form in journal_formset %}
         <div class="link-formset">
-            {{ link_form.anchor }}
-            {% if link_form.anchor.errors %}
-                {% for error in link_form.anchor.errors %}
-                    {{ error|escape }}
-                {% endfor %}
-            {% endif %}
-
-            {{ link_form.url }}
-            {% if link_form.url.errors %}
-                {% for error in link_form.url.errors %}
-                    {{ error|escape }}
-                {% endfor %}
-            {% endif %}
+            {{ journal_form }}
         </div>
     {% endfor %}
 
@@ -37,10 +24,10 @@
 
     <input type="submit" value="Update Profile" class="button"/>
 </form>
-
+{% endblock %}
 <!-- Include formset plugin - including jQuery dependency -->
 <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-<script src="{% static 'path_to/jquery.formset.js' %}"></script>
+{#<script src="{% static 'path_to/jquery.formset.js' %}"></script>#}
 <script>
     $('.link-formset').formset({
         addText: 'add link',
