added ability to log user in and out

--- a/templates/landing_page.html
+++ b/templates/landing_page.html
@@ -7,7 +7,7 @@
 	<h1>KeepBooks</h1>
 	<p></p>
 	<p>
-		<a href="#" role="button" class="btn btn-default btn-lg">Log in</a>
+		<a href="{% url 'login' %}" role="button" class="btn btn-default btn-lg">Log in</a>
 	</p>
 <p></p>
 </div>
