--- a/templates/_layout.html
+++ b/templates/_layout.html
@@ -28,17 +28,17 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="#">Goal! Soccer Team Organizer</a>
+                    <a class="navbar-brand" href="#"></a>
                 </div>
                 <div id="navbar" class="navbar-collapse collapse">
-                    <ul class="nav navbar-nav navbar-right">
-						<li><a href="#">Teams</a></li>
-                        <li><a href="#">Settings</a></li>
-                        <li><a href="#">Help</a></li>
-                    </ul>
-                    <form class="navbar-form navbar-right">
-                        <input type="text" class="form-control" placeholder="Search...">
-                    </form>
+                    {% if user.is_authenticated %}
+                        <ul class="nav navbar-nav navbar-right">
+                            <li><a href="{% url 'logout' %}">Logout</a></li>
+                        </ul>
+                        <form class="navbar-form navbar-right">
+                            <input type="text" class="form-control" placeholder="Search...">
+                        </form>
+                    {% endif %}
                 </div>
             </div>
         </nav>
