--- a/accounts/templates/accounts/journal_entry.html
+++ b/accounts/templates/accounts/journal_entry.html
@@ -7,12 +7,12 @@
 {% endif %}
 
 {% block body_content %}
-<form method="post", action="">
+<form method="post" action="">
     {% csrf_token %}
     {{ journal_formset.management_form }}
     {% for journal_form in journal_formset %}
         <div class="link-formset">
-            {{ journal_form }}
+            {{ journal_form.as_p }}
         </div>
     {% endfor %}
 
@@ -22,15 +22,16 @@
         {% endfor %}
     {% endif %}
 
-    <input type="submit" value="Update Profile" class="button"/>
+    <input type="submit" value="Enter" class="button"/>
 </form>
-{% endblock %}
-<!-- Include formset plugin - including jQuery dependency -->
+
+    <!-- Include formset plugin - including jQuery dependency -->
 <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-{#<script src="{% static 'path_to/jquery.formset.js' %}"></script>#}
+<script src="{% static 'js/jquery.formset.js' %}"></script>
 <script>
     $('.link-formset').formset({
         addText: 'add link',
         deleteText: 'remove'
     });
 </script>
+{% endblock body_content %}
